--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </button>
         </div>
     </header>
-
+<div class="main_part">
     <main class="main">
         <nav class="menu">
             <ul class="menu__list">
@@ -81,5 +81,5 @@
             </ul>
         </nav>
     </footer>
-
+</div>
 </body>
