--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Part 2</title>
 </head>
 
-<body>
+<aside>
+ <body>
     <header class="header">
         <div class="header__icon header__icon--left">
             <button class="button button__left">
@@ -23,7 +24,7 @@
             </button>
         </div>
     </header>
- <div class="main_part">
+  <div class="main_part">
     <main class="main">
         <nav class="menu">
             <ul class="menu__list">
@@ -81,5 +82,6 @@
             </ul>
         </nav>
     </footer>
- </div>
-</body>
+  </div>
+ </body>
+</aside>
